# console_menu

./: .mypy.ini  Pipfile  README.md  console_menu  console_menu.py  pyproject.toml
