[tool.poetry]
name = "console_menu"
version = "0.1.0"
description = ""
authors = ["Nick Pegg <nick@nickpegg.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.5"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
